--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <table class="table table-striped mt-4">
             <thead class="table-dark">
                 <tr>
-                    <th scope="col">⿪</th>
+                    <th scope="col">#️⃣</th>
                     <th scope="col">🧑‍💼 Nom</th>
                     <th scope="col">👩‍🎓 Prénom</th>
                     <th scope="col">📧 Email</th>
                 </tr>
             </thead>
-            <tbody>          
+            <tbody>
                 <tr>
                     <th scope="row">1</th>
                     <td>ARIORI 0.</td>
@@ -44,13 +44,13 @@
                     <td>yannisdanhoume@gmail.com</td>
                 </tr>
 
-                 <tr>
+                <tr>
                     <th scope="row">4</th>
                     <td>HOUNGNIBO </td>
                     <td> Mirabelle</td>
                     <td>godhoungnibo@gmail.com</td>
                 </tr>
-                
+
                 <tr>
                     <th scope="row">5</th>
                     <td>LOKOSSOU SOTON</td>
@@ -66,14 +66,7 @@
                 </tr>
 
                 <tr>
-                    <td scope="row">7</td> 
-                    <td>TSAGLI</td>
-                    <td>Sean</td>
-                    <td>dzifatsagli@gmail.com</td>
-                </tr>
-
-                <tr> 
-                    <th scope="row">8</th>
+                    <th scope="row">7</th>
                     <td>TSAGLI</td>
                     <td>Sean</td>
                     <td>dzifatsagli@gmail.com</td>
@@ -82,4 +75,5 @@
         </table>
     </div>
 </body>
+
 </html>
